# newpage-assignment

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  observability.py  pipeline_defaults.py  rag.py
docs/: README.md  arch_diagram.md  architecture.md  chunking_diagram.md  eval.md  processed_data.md  runbook.md
eval/: promptfoo.yaml  promptfoo_tests.json  quality_gate.py  questions_100.jsonl  run_eval.py  summary.json
scripts/: build_dataset.py  build_promptfoo_tests.py  ingest_chunks.py
sql/: schema.sql
